--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "mongodb": "^3.0.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -46,8 +47,8 @@
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
   },
-  "engines":{
-    "node":"9.2.0",
-    "npm":"5.5.1"
+  "engines": {
+    "node": "9.2.0",
+    "npm": "5.5.1"
   }
 }
