--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "mongodb": "^3.0.4",
+    "ng2-materialize": "^1.8.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
