--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "mongodb": "^3.0.4",
     "ng2-materialize": "^1.8.1",
+    "node-sass": "^4.9.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
